--- a/public/css/applicant/landingpage/landingpage.css
+++ b/public/css/applicant/landingpage/landingpage.css
@@ -7,6 +7,7 @@
 body {
     font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
     background: #f9fafb;
+    margin:0;
 }
 :root {
     --primary-orange: #020180;
